syntax = "proto3";
option go_package = ".";
import "proto/vectory/common.proto";

// An example service definition.
service Core {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc Search(SearchRequest) returns (SearchResponse){}

  rpc ListIndex(ListIndexRequest) returns (ListIndexResponse) {}

  rpc CreateIndex(CreateIndexRequest) returns (CreateIndexResponse) {}

  rpc GetIndexStat(GetIndexStatRequest) returns (GetIndexStatResponse) {}

  rpc GetIndexMeta(GetIndexMetaRequest) returns (GetIndexMetaResponse) {}

}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message SearchRequest {
  RequestHeader header = 1;
  string index_name = 2;
  repeated Vector input = 3;
  int32 limit = 4;

}

message SearchResponse{
  ResponseHeader header = 1;
  repeated SearchResult results = 2;
}

message ListIndexRequest{}

message ListIndexResponse{}

message CreateIndexRequest{}

message CreateIndexResponse{}

message GetIndexStatRequest{}

message GetIndexStatResponse{}

message GetIndexMetaRequest{}

message GetIndexMetaResponse{}
